airflow-manifests/templates/worker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    airflow-worker: "true"
spec:
  restartPolicy: Never
  containers:
    - name: base
      image: apache/airflow:2.7.1-python3.9
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
    - name: git-sync
      image: k8s.gcr.io/git-sync/git-sync:v3.6.9
      volumeMounts:
        - name: dags
          mountPath: /git
  volumes:
    - name: dags
      emptyDir: {}
